# askmydocs

./: .gitignore  LICENSE  Makefile  PROGRESS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
data/: sample.md
src/askmydocs/: __init__.py
src/askmydocs/rag/: __init__.py  chunker.py  loader.py  store.py
tests/: test_package.py  test_store.py
tests/rag/: test_chunker.py  test_loader.py  test_store.py
